@@ -4,9 +4,8 @@ core = 7.x
 dependencies[] = drupal:block
 dependencies[] = drupal:system (>=7.40)
 
-; Information added by Drupal.org packaging script on 2017-01-09
-version = "7.x-1.5"
+; Information added by Drupal.org packaging script on 2018-10-04
+version = "7.x-1.6"
 core = "7.x"
 project = "multiblock"
-datestamp = "1483973949"
-
+datestamp = "1538657887"
